--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Peanuts Game</title>
@@ -17,6 +18,7 @@
 
 <body>
   <button id="pause" onclick="this.blur();">PAUSA</button>
+  <button id="reset" class="gamebutton" onclick="this.blur();">NUEVA PARTIDA</button>
   <ul>
     <li id="scoreli">
     </li>
